# facecept3d_facs

FaceCept3D/HeadPoseEstimationFramework/: CMakeLists.txt
FaceCept3D/HeadPoseEstimationFramework/DataObject/: IDataObject.h
FaceCept3D/HeadPoseEstimationFramework/Grabber/: GrabberBase.cpp  OpenNIGrabber.cpp
FaceCept3D/HeadPoseEstimationFramework/Processor/: ShowCloudProcessor.cpp
FaceCept3D/TemplateCreator/: CMakeLists.txt  stdafx.h
facs/: CMakeLists.txt
facs/HeadPoseEstimationFramework/: CMakeLists.txt
facs/HeadPoseEstimationFramework/Align/: CloudMapper.h
facs/HeadPoseEstimationFramework/FacialAU/: facsLocalFunctions.cpp  facsLocalFunctions.h
facs/HeadPoseEstimationFramework/FacialExpressions/: ferLocalFunctions.cpp  ferLocalFunctions.h
facs/HeadPoseEstimationFramework/Processor/: FacialActionUnitProcessor.cpp  FacialActionUnitProcessor.h  FacialExpressionsProcessor.cpp  FacialExpressionsProcessor.h  ShowCloudProcessor.cpp  TrackingProcessor.cpp  TrackingProcessor.h
facs/HeadPoseEstimationFramework/Provider/: CvMatRawSerializer.cpp
facs/HeadPoseEstimationFramework/UI/: PointPicker.h
facs/TemplateCreator/: TemplateCreator.cpp
facs/TemplateTracker/: CMakeLists.txt  CMakeLists.txt~  TemplateTracker.cpp  UIProcessor.cpp  VisuilizeProcessor.cpp  VisuilizeProcessor.h  VoxelizeProcessor.cpp  stdafx.h
save/stable/HeadPoseEstimationFramework/: Landmarks.h
save/stable/TemplateCreator/: CMakeLists.txt~  TemplateCreator.cpp
save/stable/TemplateTracker/: CMakeLists.txt  TemplateTracker.cpp  UIProcessor.cpp  VisuilizeProcessor.cpp
(+29 files in other folders)
